[gd_scene load_steps=10 format=3 uid="uid://example"]

[ext_resource type="Script" path="res://ColoPicker/ColorPickerControl.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://buveyly2ysok0" path="res://_icons/square-outline.png" id="2_pgl4n"]
[ext_resource type="Texture2D" uid="uid://dbueuom3epavb" path="res://_icons/triangle-down-outline.png" id="3_7ry7s"]
[ext_resource type="Texture2D" uid="uid://bb4grfbcm8n7o" path="res://_icons/circle-outline.png" id="4_chwbj"]
[ext_resource type="Texture2D" uid="uid://cp0sh1k18kstf" path="res://_icons/eyedropper.png" id="5_8thff"]
[ext_resource type="Texture2D" uid="uid://bi0q12epcncv" path="res://_icons/checkerboard.png" id="6_5vgve"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_t1qt3"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 250
border_color = Color(0, 0, 0, 1)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_omt72"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 250
border_color = Color(0.8, 0.8, 0.8, 0)
border_blend = true

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_43orh"]

[node name="ColorPickerUI" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 38.0
offset_right = -724.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ColorPickerControl" type="Control" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(86, 0)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Shapes" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="SquareButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Shapes"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("2_pgl4n")
icon_alignment = 1
expand_icon = true

[node name="TriangleButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Shapes"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("3_7ry7s")
icon_alignment = 1
expand_icon = true

[node name="CircleButton" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer/Shapes"]
custom_minimum_size = Vector2(25, 25)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("4_chwbj")
icon_alignment = 1
expand_icon = true

[node name="EyeDropper" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
icon = ExtResource("5_8thff")
icon_alignment = 1
expand_icon = true

[node name="CheckTexture" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
texture = ExtResource("6_5vgve")
expand_mode = 1

[node name="CurrentAlphaColor" type="ColorRect" parent="VBoxContainer/HBoxContainer/VBoxContainer/CheckTexture"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HEXColorCode" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Darkness" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="DarknessSlider" type="HSlider" parent="VBoxContainer/Darkness"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_t1qt3")
value = 100.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Darkness"]
layout_mode = 2

[node name="Alpha" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="AlphaSlider" type="HSlider" parent="VBoxContainer/Alpha"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_styles/grabber_area = SubResource("StyleBoxFlat_omt72")
value = 100.0

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/Alpha"]
layout_mode = 2

[node name="ColorPlatesTabs" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TabContent" type="HFlowContainer" parent="VBoxContainer/ColorPlatesTabs"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewColorButton" type="Button" parent="VBoxContainer/ColorPlatesTabs/TabContent"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "+"

[node name="Color" type="Button" parent="VBoxContainer/ColorPlatesTabs/TabContent"]
custom_minimum_size = Vector2(60, 30)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/normal = SubResource("StyleBoxFlat_43orh")
text = "Color"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer/ColorPlatesTabs/TabContent/Color"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5vgve")
expand_mode = 1
stretch_mode = 5

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/ColorPlatesTabs"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
horizontal_scroll_mode = 0

[node name="TabHeaders" type="VBoxContainer" parent="VBoxContainer/ColorPlatesTabs/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="NewPlateTab" type="Button" parent="VBoxContainer/ColorPlatesTabs/ScrollContainer/TabHeaders"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "+"

[node name="Plate1" type="Button" parent="VBoxContainer/ColorPlatesTabs/ScrollContainer/TabHeaders"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
text = "Plate1"
